docs/v0.4.3/api-reference/column-types.mdx
---
title: "Column Types"
---

This section lists the available column types.

## string

**Description:**  
Basic text column.

---

## number

**Description:**  
Numeric column.

---

## boolean

**Description:**  
Boolean column.

**Additional:**  
`typeArguments?: { trueLabel?: string, falseLabel?: string }`

**Notes:**
Default true and false labels are `Yes` and `No`.

---

## reference

**Description:**  
References data from another sheet.

**Additional:**  
`typeArguments: { sheetId: string, sheetColumnId: string }`

---

## calculated

**Description:**  
Computed column value (read-only).

**Additional:**  
`typeArguments: { getValue: (row: SheetRow) => ImporterOutputFieldType }`

---

## enum

**Description:**
Column with predefined values. Supports both single-select and multi-select modes.

**Additional:**
```ts
// Single-select (default)
typeArguments: {
  values: SelectOption<string>[];
  multiple?: false;
}

// Multi-select
typeArguments: {
  values: SelectOption<string>[];
  multiple: true;
  delimiter?: string | RegExp;  // Default: ','
}
```

**Notes:**

```ts
export interface SelectOption<T> {
  label: ImporterOutputFieldType;
  value: T;
  icon?: ReactNode;
  group?: string;
}
```

**Multi-Select Behavior:**
- When `multiple: true`, values are stored as `string[]` instead of `string`
- CSV values are split by `delimiter` (default: comma)
- Each part is trimmed and mapped from label to value
- Display shows comma-separated labels

**Example:**
```ts
{
  label: 'Skills',
  id: 'skills',
  type: 'enum',
  typeArguments: {
    values: [
      { label: 'JavaScript', value: 'js' },
      { label: 'Python', value: 'py' },
      { label: 'React', value: 'react' },
    ],
    multiple: true,
    delimiter: ',',
  },
}
```

For a CSV cell containing `"JavaScript, Python"`, the stored value will be `["js", "py"]`.
